[package]
name = "hyperminhash"
version = "0.1.4"
authors = ["Lukas Lueg <lukas.lueg@gmail.com>"]
repository = "https://github.com/lukaslueg/hyperminhash"
documentation = "https://docs.rs/hyperminhash"
description = "Fast, constant-memory cardinality approximation"
edition = "2024"
readme = "README.md"
license = "MIT"

[dependencies]
xxhash-rust = { version = "0.8", features = [ "xxh3" ] }
byteorder = { version = "1.3", optional = true }

[dev-dependencies]
rand = "0.9"
crossbeam = "0.8"
memchr = "2"

[features]
default = []
serialize = ["byteorder"]
stdsimd = []
